17 June 2014: Wouter
	- iana portlist updated.

3 June 2014: Wouter
	- Add AAAA for B root server to default root hints.

2 June 2014: Wouter
	- Remove unused define from iterator.h

30 May 2014: Wouter
	- Fixup sldns_enum_edns_option typedef definition.

28 May 2014: Wouter
	- Code cleanup patch from Dag-Erling Smorgrav, with compiler issue
	  fixes from FreeBSD's copy of Unbound, he notes:
	  Generate unbound-control-setup.sh at build time so it respects
	  prefix and sysconfdir from the configure script.  Also fix the
	  umask to match the comment, and the comment to match the umask.
	  Add const and static where needed.  Use unions instead of
	  playing pointer poker.  Move declarations that are needed in
	  multiple source files into a shared header.  Move sldns_bgetc()
	  from parse.c to buffer.c where it belongs.  Introduce a new
	  header file, worker.h, which declares the callbacks that
	  all workers must define.  Remove those declarations from
	  libworker.h.	Include the correct headers in the correct places.
	  Fix a few dummy callbacks that don't match their prototype.
	  Fix some casts.  Hide the sbrk madness behind #ifdef HAVE_SBRK.
	  Remove a useless printf which breaks reproducible builds.
	  Get rid of CONFIGURE_{TARGET,DATE,BUILD_WITH} now that they're
	  no longer used.  Add unbound-control-setup.sh to the list of
	  generated files.  The prototype for libworker_event_done_cb()
	  needs to be moved from libunbound/libworker.h to
	  libunbound/worker.h.
	- Fixup out-of-directory compile with unbound-control-setup.sh.in.
	- make depend.

23 May 2014: Wouter
	- unbound-host -D enabled dnssec and reads root trust anchor from
	  the default root key file that was compiled in.

20 May 2014: Wouter
	- Feature, unblock-lan-zones: yesno that you can use to make unbound
	  perform 10.0.0.0/8 and other reverse lookups normally, for use if
	  unbound is running service for localhost on localhost.

16 May 2014: Wouter