@@ -1,3 +1,7 @@
+24 June 2014: Wouter
+	- Fix caps-for-id fallback, and added fallback attempt when servers
+	  drop 0x20 perturbed queries.
+
 17 June 2014: Wouter
 	- iana portlist updated.
 
